Use d3.selection.raise to avoid redrawing lines; adjust spacing of svg

--- a/src/components/experiment-tracking/metrics-plots/metrics-plots.scss
+++ b/src/components/experiment-tracking/metrics-plots/metrics-plots.scss
@@ -2,6 +2,7 @@
 
 .metrics-plots-wrapper {
   padding: 5em 0 0 9em;
+  width: 100%;
 }
 
 .chart-types-wrapper {
