--- a/src/components/experiment-tracking/parallel-coordinates/parallel-coordinates.scss
+++ b/src/components/experiment-tracking/parallel-coordinates/parallel-coordinates.scss
@@ -1,7 +1,7 @@
 @use '../../../styles/variables' as colors;
 
-.parallelCoordinates {
-  margin: 2em;
+.parallel-coordinates {
+  margin: 0 4em 0 0;
   font-family: sans-serif;
 }
 
